--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test:controllers": "mocha --compilers js:babel-core/register src/test/controllers/*",
+    "test:models": "mocha --compilers js:babel-core/register src/test/models/*",
+    "test:routes": "mocha --compilers js:babel-core/register src/test/routes/*",
     "start": "nodemon src/index.js --exec babel-node",
-    "build": "babel src -d dist",
+    "build": "babel src --ignore src/test -d dist",
     "serve": "node dist/index.js",
     "build:docs": "apidoc -i src/ -o apidoc/ && open -a 'Google Chrome' apidoc/index.html"
   },
-  "author": "",
+  "author": "Damien Touchette",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -18,21 +20,21 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-watch": "^2.0.3",
     "mocha": "^3.1.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "apidoc": "^0.16.1",
+    "expect.js": "^0.2.0",
+    "chai": "^3.5.0",
+    "request": "^2.79.0",
+    "mocha": "^3.1.2"
   },
   "dependencies": {
-    "apidoc": "^0.16.1",
     "body-parser": "^1.15.2",
-    "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
-    "expect.js": "^0.2.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
-    "mocha": "^3.1.2",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
-    "node-env-file": "^0.1.8",
-    "request": "^2.79.0"
+    "node-env-file": "^0.1.8"
   }
 }
