--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-validator": "^3.0.0",
     "jsonwebtoken": "^7.1.9",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.8",
